[package]
name = "mongotest"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.18"
juniper = { git = "https://github.com/iancormac84/juniper.git", branch = "bson-plus-graphiql" }
mongodb = { git = "https://github.com/iancormac84/mongo-rust-driver-prototype.git", branch = "justtest" }
runtime = "0.3.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
surf = { git = "https://github.com/taiki-e/surf.git", branch = "futures" }
tide = { git = "https://github.com/rustasync/tide.git" }

[[bin]]
name = "mockserver"
path = "src/mockserver.rs"

[[bin]]
name = "mockclient"
path = "src/mockclient.rs"

[patch.crates-io]
bson = { git = "https://github.com/zonyitoo/bson-rs.git" }